# dem-renderer

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  download_copernicus_tiles_30m.sh  download_copernicus_tiles_30m_5x5.sh  menu.html
.github/: copilot-instructions.md
crates/dem_io/: Cargo.toml
crates/dem_io/src/: aligned.rs  alignment.rs  crs.rs  geotiff.rs  grid.rs  heightmap.rs  lib.rs  overview.rs  projection.rs  tiled.rs
crates/profiling/: Cargo.toml
crates/profiling/src/: lib.rs
crates/render_cpu/: Cargo.toml
crates/render_cpu/src/: camera.rs  lib.rs  raymarch.rs  raymarch_avx2.rs  raymarch_neon.rs  render.rs  render_avx2.rs  render_neon.rs
crates/render_gpu/: Cargo.toml
crates/render_gpu/src/: camera.rs  context.rs  lib.rs  normals_gpu.rs  render_buffer.rs  scene.rs  (+10 more)
crates/terrain/: Cargo.toml
docs/: benchmarks_report.html
docs/benchmark_results/: results_M4_arm.txt  results_mac_intel_x86.txt  results_old_asus_x86.txt  results_win_acer_nitro_big_x86.txt
docs/improvements/: algo_fill_nodata_improvement.md
docs/learnings/: additional_normal_lightning_geometry_phase_2.md  egui_explanations.md  project_structure.md
docs/lessons/: 1.md  additional-info.md
docs/planning/: global_plan.md  multi-tile-multiple-resolution-load.md  performace-improvements.md  viewer-improvements-plan.md  viewer-phase-8.md  viewer-plan.md
docs/saved_runs/: first_baseline_banchmark_no_optimisations_2026-03-21T12:55.txt  second_baseline_banchmark_simd_for_seq_and_random_read_2026-03-21T14:00.txt
n47_e011_1arc_v3_bil/: n47_e011_1arc_v3.blw  n47_e011_1arc_v3.hdr
skills/: learning-guide.skill
skills/learning-guide/: SKILL.md
src/: consts.rs  frame_render_cpu.rs  frame_render_final.rs  main.rs  render_gif.rs  system_info.rs  utils.rs  viewer.rs
src/benchmarks/: heightmap.rs  mod.rs  multi_frame.rs  normals.rs  phase6.rs  seq_read_write.rs  shadow_mask.rs
src/launcher/: background.rs  config.rs  downloader.rs  mod.rs  renderer.rs  style.rs  widgets.rs
src/viewer/: geo.rs  hud_background.rs  hud_renderer.rs  mod.rs  scene_init.rs  shader_hud_bg.wgsl  shader_sun_hud.wgsl  tiers.rs  tile_index.rs
tiles/Copernicus_DSM_COG_10_N47_00_E011_00_DEM/: Copernicus_DSM_10_N47_00_E011_00.xml
(+112 files in other folders)
