[workspace]
members = [
    "crates/dem_io",
    "crates/terrain",
    "crates/render_gpu",
    "crates/profiling",
]
resolver = "2"

[package]
name = "dem_renderer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dem_renderer"
path = "src/main.rs"

[dependencies]
profiling = { path = "crates/profiling" }
dem_io = { path = "crates/dem_io" }
terrain = { path = "crates/terrain" }
render_gpu = { path = "crates/render_gpu" }
image = "0.25"
rayon = "1"
sysinfo = "0.33.1"
winit = "0.30"
wgpu = "29.0.1"
glyphon = { git = "https://github.com/grovesNL/glyphon", branch = "main" }
bytemuck = { version = "1", features = ["derive"] }
