[workspace]
members = [
    "crates/dem_io",
    "crates/terrain",
    "crates/render_gpu",
    "crates/profiling",
]
resolver = "2"

[package]
name = "dem_renderer"
version = "0.0.2"
edition = "2024"

[[bin]]
name = "dem_renderer"
path = "src/main.rs"

[dependencies]
profiling = { path = "crates/profiling" }
dem_io = { path = "crates/dem_io" }
terrain = { path = "crates/terrain" }
render_gpu = { path = "crates/render_gpu" }
image = "0.25"
rayon = "1.12.0"
sysinfo = "0.33.1"
winit = "0.30"
wgpu = "29.0.3"
glyphon = { git = "https://github.com/grovesNL/glyphon", branch = "main" }
bytemuck = { version = "1", features = ["derive"] }
egui = { version = "0.34.2", features = ["default_fonts"] }
egui-wgpu = { version = "0.34.2", features = ["winit"] }
egui-winit = "0.34.2"
serde = { version = "1", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"
dirs = "6.0.0"
rfd = "0.17.2"
ureq = { version = "2", features = ["tls"] }
